@@ -5,6 +5,7 @@ CHANGELOG
 0.17.0 (unreleased)
 -------------------
 
+* Fix creation and edition of interventions on infrastructures (fixes #678)
 * Change default objects color to yellow
 * Restored Italian translations
 * Fix regex for RAISE NOTICE (fixes #673)
